# combinatorial-optimization-practice

./: README.md  minimize_mean_deviation.ipynb  minimize_range.ipynb  pyproject.toml  simulated_annealing.ipynb
